--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>I Love You Ramsha</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&family=Dancing+Script&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600&family=Dancing+Script&display=swap" rel="stylesheet">
+
+  <!-- CSS File -->
   <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
   <!-- Rotate Warning -->
   <div id="rotate-warning">
@@ -40,9 +42,11 @@
       </div>
     </div>
 
-    <p class="message">Forever and Always, My Love </p>
+    <p class="message">Forever and Always, My Love ❤️</p>
+    <p class="sorry-text">I’m really sorry, please forgive me 💔</p>
   </div>
 
+  <!-- JS File -->
   <script src="script.js"></script>
 </body>
 </html>
